--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,18 @@
+# App Name & Port
 spring.application.name=quiz
-server=8080
+server.port=${PORT:8080}
+
+# Spring Security (Optional - use as per your app)
 spring.security.user.name=admin
 spring.security.user.password=admin
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/quizapp
+
+# Railway MySQL Database Config
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
 spring.datasource.username=root
-spring.datasource.password=hanzala#1234#899
+spring.datasource.password=uUudYxvTCkgzmMHzeblUpAbTQqoVFdfH
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate Config
 spring.jpa.show-sql=true
-
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
