--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.security.user.name=admin
 spring.security.user.password=admin
 
 # Railway MySQL Database Config
-spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
-spring.datasource.username=root
-spring.datasource.password=uUudYxvTCkgzmMHzeblUpAbTQqoVFdfH
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQL_DATABASE}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate Config
