--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,1 @@
-# App Name & Port
-spring.application.name=quiz
-server.port=${PORT:8080}
-
-# Spring Security (Optional - use as per your app)
-spring.security.user.name=admin
-spring.security.user.password=admin
-
-# Railway MySQL Database Config
-spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQL_DATABASE}
-spring.datasource.username=${MYSQLUSER}
-spring.datasource.password=${MYSQLPASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# JPA / Hibernate Config
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.profiles.active=${ENV:dev}
